--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-✅ `README.md` for Your Spring Boot CI/CD DevOps Project
+✅ `README.md` my Your Spring Boot CI/CD DevOps Project
 
 ```markdown
 # 📚 Spring Boot Library Management System – CI/CD on AWS with DevOps Tools
